--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -1,7 +1,7 @@
 * {
-  margin:0;
-  padding:0;
-  border:0;
+  margin: 0;
+  padding: 0;
+  border: 0;
   box-sizing: border-box;
 
   &:before,
@@ -14,6 +14,7 @@ html,body {
   width: 100%;
   height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', '游ゴシック  Medium', meiryo, sans-serif;
+  color: $baseTextColor;
   font-size: 62.5%;
   line-height:1;
 }
@@ -31,4 +32,9 @@ img {
 table {
   border-collapse:collapse;
   border-spacing:0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
