--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,6 +1,9 @@
 /*==========================
           colors
 ==========================*/
+$baseColor : #000000;
+
+//font
 $baseTextColor : #222222;
 
 
