--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -1,16 +1,23 @@
 * {
   margin: 0;
   padding: 0;
-  border: 0;
+}
+
+html {
   box-sizing: border-box;
 
-  &:before,
-  &:after {
-    box-sizing: border-box;
+  * {
+    box-sizing: inherit;
+
+    &:before,
+    &:after {
+      box-sizing: border-box;
+    }
   }
 }
 
-html,body {
+html,
+body {
   -webkit-text-size-adjust: 100%;
   width: 100%;
   height: 100%;
@@ -18,6 +25,25 @@ html,body {
   color: $baseTextColor;
   font-size: 62.5%;
   line-height:1;
+}
+
+article,
+aside,
+figure,
+footer,
+header,
+section {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: normal;
 }
 
 ul {
@@ -33,6 +59,12 @@ img {
 table {
   border-collapse:collapse;
   border-spacing:0;
+}
+
+th,
+td {
+  padding: 0;
+  text-align: left;
 }
 
 a {
@@ -51,4 +83,8 @@ input, button, textarea, select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+}
+
+iframe {
+  border: none;
 }
