--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -78,3 +78,11 @@ $sanSerif : -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Hiragino Sans'
   line-height: $lh/$fz;
   letter-spacing: #{($ls/1000)}em;
 }
+
+
+/*==========================
+           vars
+==========================*/
+@mixin overflow-touch{
+  -webkit-overflow-scrolling: touch;
+}
