--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -13,4 +13,16 @@
 @import "_reset.scss";
 
 
+/*==========================
+           mixin
+==========================*/
+@import "_mixin.scss";
+
+
+/*==========================
+           mixin
+==========================*/
+@import "_helper.scss";
+
+
 
