--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -21,9 +21,10 @@ body {
   -webkit-text-size-adjust: 100%;
   width: 100%;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', '游ゴシック  Medium', meiryo, sans-serif;
-  color: $baseTextColor;
+  color: $base-text-color;
+  font-family: -apple-system, BlinkMacSystemFont, "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
   font-size: 62.5%;
+  font-weight: 500;
   line-height:1;
 }
 
