除外ファイル指定追加

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,10 +1,10 @@
-<% include _head %>
-<% include _l-header %>
+<% include _include/_head %>
+<% include _include/_l-header %>
 
 <main></main>
 
-<% include _l-footer %>
+<% include _include/_l-footer %>
 
 <!-- javascript -->
-<% include _script %>
-<% include _foot %>
+<% include _include/_script %>
+<% include _include/_foot %>
