--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,4 +1,13 @@
-<% include _include/_head %>
+<% var meta = {
+    title:'site name',
+    desc:'このサイトの説明'
+}; %><% var og = {
+    title:'site name',
+    desc:'このサイトの説明',
+    type:'website',
+    url:'http://hogehoge.jp',
+    image:'https://example.com/image.jpg'
+}; %><% include _include/_head %>
 <% include _include/_l-header %>
 
 <main></main>
