--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -8,6 +8,12 @@
 
 
 /*==========================
+         functon
+==========================*/
+@import "_function.scss";
+
+
+/*==========================
         reset.css
 ==========================*/
 @import "_reset.scss";
