--- a/src/css/_function.scss
+++ b/src/css/_function.scss
@@ -15,3 +15,9 @@
   $fz: ($fz / ((floor($fz) * 2) % 2 + 1)) * 10;
   @return (($fz * $lh) - $fz) / 2 + px;
 }
+
+//要素のパーセント求める(マージン、パディングなんでも使えるアレ)
+//percentSpace(自分の幅, 親の幅)
+@function percentSpace($thisWidth, $rootWidth) {
+  @return $thisWidth / $rootWidth * 100 + %;
+}
