--- a/src/assets/_include/_head.ejs
+++ b/src/assets/_include/_head.ejs
@@ -21,7 +21,7 @@
 
     <title><%= meta.title %></title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="<%= root %>assets/css/style.css">
 
 </head>
 <body>
