--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,4 +1,5 @@
-<% var meta = {
+<% var root = './'
+%><% var meta = {
     title:'site name',
     desc:'このサイトの説明'
 }; %><% var og = {
@@ -7,13 +8,13 @@
     type:'website',
     url:'http://hogehoge.jp',
     image:'https://example.com/image.jpg'
-}; %><% include _include/_head %>
-<% include _include/_l-header %>
+}; %><% include assets/_include/_head %>
+<% include assets/_include/_l-header %>
 
 <main></main>
 
-<% include _include/_l-footer %>
+<% include assets/_include/_l-footer %>
 
 <!-- javascript -->
-<% include _include/_script %>
-<% include _include/_foot %>
+<% include assets/_include/_script %>
+<% include assets/_include/_foot %>
