--- a/src/assets/css/_foundation/_function.scss
+++ b/src/assets/css/_foundation/_function.scss
@@ -21,3 +21,8 @@
 @function percentSpace($thisWidth, $rootWidth) {
   @return $thisWidth / $rootWidth * 100%;
 }
+
+//z-indexの配列index取る
+@function z($name) {
+  @return index($z-index, $name);
+}
