--- a/src/assets/css/_foundation/_reset.scss
+++ b/src/assets/css/_foundation/_reset.scss
@@ -22,10 +22,12 @@ body {
   width: 100%;
   height: 100%;
   color: $base-text-color;
-  font-family: -apple-system, BlinkMacSystemFont, "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
+  font-family: $san-serif;
   font-size: 62.5%;
   font-weight: 500;
   line-height:1;
+  -moz-osx-font-smoothing: grayscale; // Firefox
+  -webkit-font-smoothing: antialiased;
 }
 
 article,
