--- a/src/assets/css/_foundation/_variable.scss
+++ b/src/assets/css/_foundation/_variable.scss
@@ -15,14 +15,21 @@ $s-width : 780px; //smartPhone - ipad
 $m-width : 1024px; //ipad横 & ipadPro - 小型PC
 $l-width : 1200px; //PCSize
 
+
+/*==========================
+           z-index
+==========================*/
+$z-index: (
+  header
+);
+
 /*==========================
            font
 ==========================*/
 
 /*font-family
 ==========================*/
-$san-serif : -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', '游ゴシック  Medium', meiryo, sans-serif;
-
+$san-serif : -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Yu Gothic', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', meiryo, sans-serif;
 
 /*font-size
 ==========================*/
