--- a/src/assets/css/_foundation/_variable.scss
+++ b/src/assets/css/_foundation/_variable.scss
@@ -29,7 +29,7 @@ $z-index: (
 
 /*font-family
 ==========================*/
-$san-serif : -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Yu Gothic', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', meiryo, sans-serif;
+$san-serif : -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Yu Gothic Medium', '游ゴシック Medium', YuGothic, '游ゴシック体', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', meiryo, sans-serif;
 
 /*font-size
 ==========================*/
