aigisを試しに入れてみた

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,6 +1,5 @@
 @charset "utf-8";
 
-
 /*==========================
         foundation
 ==========================*/
@@ -32,3 +31,24 @@
 /*==========================
            scope
 ==========================*/
+
+
+/*
+---
+name: Color
+category: color
+tag: latest
+---
+
+```html
+<div class="c-color">color</div>
+```
+
+*/
+
+.c-color {
+  display: block;
+  width: 100px;
+  height: 100px;
+  background-color: tomato;
+}
