--- a/styleguide/aigis_assets/css/theme.css
+++ b/styleguide/aigis_assets/css/theme.css
@@ -146,7 +146,6 @@ tag: latest
   margin: 0 auto 3em;
   overflow: scroll;
   border: 1px solid #A0A0A0; }
-
 .aigis-preview {
   border: 1px solid #A0A0A0;
   border-radius: 3px;
@@ -235,12 +234,12 @@ tag: latest
 
 */
 .aigis-categoryList ul {
-  padding: 3px 10px;
+  padding: 4px 10px 8px;
   font-size: 14px; }
 .aigis-categoryList li a{
   display: block;
   position: relative;
-  padding: 3px 10px 3px 10px;
+  padding: 8px 10px 8px 10px;
   color: #454545;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -337,6 +336,7 @@ tag: latest
 
 */
 .aigis-moduleList {
+  padding: 12px 0 24px;
   line-height: 1.6;
   font-size: 16px; }
 .aigis-moduleList__item a {
