--- a/src/assets/css/_foundation/_variable.scss
+++ b/src/assets/css/_foundation/_variable.scss
@@ -4,12 +4,12 @@
 $base-color : #000000;
 
 //font
-$base-text-color : #222222;
+$base-text-color : rgba(0,0,0,0.87);
 
 /*library-color
 ==========================*/
 //black
-$color-black84: rgba(0,0,0,0.87);
+$color-black87: rgba(0,0,0,0.87);
 $color-black54: rgba(0,0,0,0.54);
 $color-black26: rgba(0,0,0,0.26);
 $color-black12: rgba(0,0,0,0.12);
