--- a/src/assets/css/_foundation/_mixin.scss
+++ b/src/assets/css/_foundation/_mixin.scss
@@ -14,6 +14,12 @@
   }
 }
 
+@mixin mq-min-sp { //iphone↓　size
+  @media (min-width: $s-width) {
+    @content
+  }
+}
+
 @mixin mq-small-pc { //ipad - ipadPro　size
   @media (min-width: $s-width) and (max-width: $m-width) {
     @content
