--- a/src/assets/css/_foundation/_mixin.scss
+++ b/src/assets/css/_foundation/_mixin.scss
@@ -32,6 +32,32 @@
   }
 }
 
+/*==========================
+          flex box
+==========================*/
+@mixin flexBox($align:start, $justify:start) {
+  display: flex;
+
+  @if $align == 'start' {
+    align-items: flex-start
+  } @else if $justify == 'center' {
+    align-items: center;
+  } @else if $justify == 'end' {
+    align-items: flex-end;
+  }
+
+  @if $justify == 'start' {
+    justify-content: flex-start;
+  } @else if $justify == 'center' {
+    justify-content: center;
+  } @else if $justify == 'end' {
+    justify-content: flex-end;
+  } @else if $justify == 'around' {
+    justify-content: space-around;
+  } @else if $justify == 'between' {
+    justify-content: space-between;
+  }
+}
 
 /*==========================
           css grid
