--- a/src/assets/css/_foundation/_reset.scss
+++ b/src/assets/css/_foundation/_reset.scss
@@ -91,6 +91,10 @@ input, button, textarea, select {
   -moz-appearance: none;
 }
 
+select::-ms-expand {
+  display: none;
+}
+
 iframe {
   border: none;
 }
