--- a/src/assets/css/_foundation/_variable.scss
+++ b/src/assets/css/_foundation/_variable.scss
@@ -41,7 +41,7 @@ $l-width : 1200px; //PCSize
            z-index
 ==========================*/
 $z-index: (
-  header
+  header,
 );
 
 /*==========================
