--- a/src/index.ejs
+++ b/src/index.ejs
@@ -35,6 +35,21 @@
     }) %>
   <% }) %>
 
+  <a href="" class="js-twitterShare js-shareBtn">twitter</a><br>
+  <a href="" class="js-facebookShare js-shareBtn">facebook</a>
+
+  <div>
+    <a href="#section01" class="js-smoothScroll">section01</a>
+    <a href="#section02" class="js-smoothScroll">section02</a>
+  </div>
+
+  <section id="section01">
+    section01
+  </section>
+  <section id="section02">
+    section02
+  </section>
+
 </main>
 
 <% include assets/_include/_layout/_l-footer %>
