--- a/src/assets/css/_foundation/_variable.scss
+++ b/src/assets/css/_foundation/_variable.scss
@@ -1,48 +1,44 @@
 /*==========================
           colors
 ==========================*/
-$base-color : #000000;
+$base-color: #000000;
 
 //font
-$base-text-color : rgba(0,0,0,0.87);
+$base-text-color: rgba(0, 0, 0, 0.87);
 
 /*library-color
 ==========================*/
 //black
-$color-black87: rgba(0,0,0,0.87);
-$color-black54: rgba(0,0,0,0.54);
-$color-black26: rgba(0,0,0,0.26);
-$color-black12: rgba(0,0,0,0.12);
+$color-black87: rgba(0, 0, 0, 0.87);
+$color-black54: rgba(0, 0, 0, 0.54);
+$color-black26: rgba(0, 0, 0, 0.26);
+$color-black12: rgba(0, 0, 0, 0.12);
 //white
-$color-white100: #FFFFFF;
-$color-white70: rgba(255,255,255,0.70);
-$color-white30: rgba(255,255,255,0.30);
-$color-white12: rgba(255,255,255,0.12);
+$color-white100: #ffffff;
+$color-white70: rgba(255, 255, 255, 0.7);
+$color-white30: rgba(255, 255, 255, 0.3);
+$color-white12: rgba(255, 255, 255, 0.12);
 //sns
-$color-sns-facebook: #3A579D;
-$color-sns-github: #38393D;
-$color-sns-google: #CD5B45;
-$color-sns-hatena: #38393D;
-$color-sns-instagram: #5951D8;
-$color-sns-line: #4ECD00;
-$color-sns-twitter: #1DA1F2;
-
+$color-sns-facebook: #3a579d;
+$color-sns-github: #38393d;
+$color-sns-google: #cd5b45;
+$color-sns-hatena: #38393d;
+$color-sns-instagram: #5951d8;
+$color-sns-line: #4ecd00;
+$color-sns-twitter: #1da1f2;
 
 /*==========================
         baseWidth
 ==========================*/
-$xs-width : 340px; //iphone5
-$s-width : 780px; //smartPhone - ipad
-$m-width : 1024px; //ipad横 & ipadPro - 小型PC
-$l-width : 1200px; //PCSize
-
+$xs-width: 340px; //iphone5
+$s-width: 780px; //smartPhone - ipad
+$m-width: 1024px; //ipad横 & ipadPro - 小型PC
+$l-width: 1200px; //PCSize
 
 /*==========================
            z-index
 ==========================*/
-$z-index: (
-  header,
-);
+$z-index: (header);
 
 /*==========================
            font
@@ -50,7 +46,9 @@ $z-index: (
 
 /*font-family
 ==========================*/
-$san-serif : -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Yu Gothic Medium', '游ゴシック Medium', YuGothic, '游ゴシック体', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', meiryo, sans-serif;
+$san-serif: -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
+  'Yu Gothic Medium', '游ゴシック Medium', YuGothic, '游ゴシック体',
+  'Hiragino Sans', 'Hiragino Kaku Gothic ProN', meiryo, sans-serif;
 
 /*==========================
            easing
@@ -94,4 +92,3 @@ $ease-in-out-circ: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 $ease-in-back: cubic-bezier(0.6, -0.28, 0.735, 0.045);
 $ease-out-back: cubic-bezier(0.175, 0.885, 0.32, 1.275);
 $ease-in-out-back: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-
