feat: add prettier

--- a/src/assets/css/_foundation/_reset.scss
+++ b/src/assets/css/_foundation/_reset.scss
@@ -26,7 +26,8 @@ body {
   line-height: 1;
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: unset;
-  @media only screen and(-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  @media only screen and(-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 2dppx) {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
