--- a/src/assets/css/_foundation/_mixin.scss
+++ b/src/assets/css/_foundation/_mixin.scss
@@ -42,43 +42,34 @@
 ==========================*/
 
 @mixin flexBox($align: start, $justify: start, $wrap: nowarp, $block: block) {
-  @if $block=='block' {
+  @if $block== 'block' {
     display: flex;
-  }
-  @else if $block=='inline' {
+  } @else if $block== 'inline' {
     display: inline-flex;
   }
-  @if $align=='start' {
+  @if $align== 'start' {
     align-items: flex-start;
-  }
-  @else if $align=='center' {
+  } @else if $align== 'center' {
     align-items: center;
-  }
-  @else if $align=='end' {
+  } @else if $align== 'end' {
     align-items: flex-end;
-  }
-  @else if $align=='stretch' {
+  } @else if $align== 'stretch' {
     align-items: stretch;
   }
-  @if $justify=='start' {
+  @if $justify== 'start' {
     justify-content: flex-start;
-  }
-  @else if $justify=='center' {
+  } @else if $justify== 'center' {
     justify-content: center;
-  }
-  @else if $justify=='end' {
+  } @else if $justify== 'end' {
     justify-content: flex-end;
-  }
-  @else if $justify=='around' {
+  } @else if $justify== 'around' {
     justify-content: space-around;
-  }
-  @else if $justify=='between' {
+  } @else if $justify== 'between' {
     justify-content: space-between;
   }
-  @if $wrap=='wrap' {
+  @if $wrap== 'wrap' {
     flex-wrap: wrap;
-  }
-  @else if $wrap=='nowrap' {
+  } @else if $wrap== 'nowrap' {
     flex-wrap: nowrap;
   }
 }
