--- a/src/assets/css/_foundation/_mixin.scss
+++ b/src/assets/css/_foundation/_mixin.scss
@@ -75,6 +75,23 @@
 }
 
 /*==========================
+          triangle
+==========================*/
+// $direction { top, right, bottom, left }
+@mixin drawTriangle($direction, $width, $height, $color) {
+  width: 0;
+  height: 0;
+  border: solid transparent;
+  @if $direction== 'top' or $direction== 'bottom' {
+    border-width: $width ($height / 2);
+    border-top-color: $color;
+  } @else if $direction== 'right' or $direction== 'left' {
+    border-width: ($width / 2)  $height;
+    border-right-color: $color;
+  }
+}
+
+/*==========================
           css grid
 ==========================*/
 
@@ -91,7 +108,7 @@
 }
 
 /*==========================
-           overflow
+          overflow
 ==========================*/
 
 @mixin textHidden {
