feat: 🎸 ejs variables

--- a/src/assets/_include/_config/_meta.ejs
+++ b/src/assets/_include/_config/_meta.ejs
@@ -19,4 +19,4 @@
 
 <title><%= meta.title %><% if (meta.title.length) {%> | <% } %><%= head.title %></title>
 
-<link rel="stylesheet" href="<%= baseDir.css %>/style.css">
+<link rel="stylesheet" href="<%= baseDir.css %>/style.css?<%= Date %>">
