--- a/src/assets/css/_foundation/_function.scss
+++ b/src/assets/css/_foundation/_function.scss
@@ -26,3 +26,8 @@
 @function z($name) {
   @return index($z-index, $name);
 }
+
+//remに変換
+@function rem($size: 14) {
+  @return $size / 16 + rem;
+}
