--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -9,26 +9,32 @@
 @import '_foundation/reset';
 
 /*==========================
-           utility
-==========================*/
-
-@import '_object/_utility/utility';
-
-/*==========================
           layout
 ==========================*/
 
-/*==========================
-          project
-==========================*/
+// @import '_layout/*';
 
 /*==========================
           component
 ==========================*/
 
+// @import '_object/_component/*';
+
+/*==========================
+          project
+==========================*/
+
+// @import '_object/_project/*';
+
 /*==========================
            scope
 ==========================*/
+
+/*==========================
+           utility
+==========================*/
+
+@import '_object/_utility/utility';
 
 /*
 ---
