--- a/src/assets/css/_foundation/_mixin.scss
+++ b/src/assets/css/_foundation/_mixin.scss
@@ -82,12 +82,12 @@
   width: 0;
   height: 0;
   border: solid transparent;
-  @if $direction== 'top' or $direction== 'bottom' {
+  @if $direction== 'right' or $direction== 'left' {
     border-width: $width ($height / 2);
-    border-top-color: $color;
-  } @else if $direction== 'right' or $direction== 'left' {
+    border-#{$direction}-color: $color;
+  } @else if $direction== 'top' or $direction== 'bottom' {
     border-width: ($width / 2)  $height;
-    border-right-color: $color;
+    border-#{$direction}-color: $color;
   }
 }
 
